[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/atlasica/dock/Inspector.gd" type="Script" id=1]

[node name="Inspector" type="PanelContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 262.0
margin_bottom = 68.0
rect_min_size = Vector2( 400, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 65.0

[node name="LblName" type="Label" parent="VBoxContainer"]
margin_right = 386.0
margin_bottom = 14.0
text = "name"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 386.0
margin_bottom = 18.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 386.0
margin_bottom = 22.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 386.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 354.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Atlas position:"

[node name="LblPos" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 358.0
margin_right = 386.0
margin_bottom = 14.0
text = "(0,0)"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 386.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 354.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Sprite size:"

[node name="LblSize" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 358.0
margin_right = 386.0
margin_bottom = 14.0
text = "(0,0)"
[connection signal="resized" from="VBoxContainer/TextureRect" to="." method="_on_TextureRect_resized"]
